# ai-document-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/sample_documents/: contract_sample.txt  legal_brief_sample.txt  report_sample.txt
frontend/: index.html
frontend/src/: App.css  App.jsx
src/: config.py  main.py
src/agents/: analyzer.py  crew.py  researcher.py  reviewer.py  writer.py
src/mcp/: database_server.py  filesystem_server.py
src/models/: document.py  report.py
src/routes/: analysis.py  documents.py  health.py
src/services/: document_store.py  pipeline.py
src/tools/: keyword_analyzer.py  sentiment_scorer.py  summary_generator.py  text_extractor.py
tests/: conftest.py  test_agents.py  test_mcp.py  test_models.py  test_pipeline.py  test_routes.py  test_tools.py
