[project]
name = "ai-document-pipeline"
version = "1.0.0"
description = "AI Document Intelligence Pipeline with CrewAI + MCP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "crewai>=0.86.0",
    "crewai-tools>=0.14.0",
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
